Enhance lifespan tracking